kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: job-orchestrator-client-network-policy
  labels:
    app: job-orchestrator
    component: client
spec:
  podSelector:
    matchLabels:
      app: job-orchestrator
      component: client
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: job-orchestrator
              component: server
      ports:
        - protocol: TCP
          port: 9000
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: job-orchestrator
              component: server
      ports:
        - protocol: TCP
          port: 5000
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
